<resources>


    <string name="empty_text">null</string>

    <!-- MainActivity-->
    <string name="app_name">ReadingYouself</string>
    <string name="book_shelf">书架</string>
    <string name="category">分类</string>
    <string name="ranking">排行榜</string>


    <!-- rankingActivity-->
    //find
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="picture">picture</string>
    <string name="epub">epub</string>
    <string name="month_ranking">月榜</string>
    <string name="total_ranking">总榜</string>
    <string name="week_ranking">周榜</string>
    <string name="search_book_hint">搜索</string>
    <string name="book_name">书名 :</string>
    <string name="author">作者 :</string>
    <string name="tag">标签 :</string>
    <string name="short_introduction">简介 :</string>
    <string name="last_chapter">最新章节 :</string>

    //booktype
    <string name="category_type_hot">热门</string>
    <string name="category_type_new">新书</string>
    <string name="category_type_reputation">好评</string>
    <string name="category_type_over">完结</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //chapterActivity
    <string name="from_last_reading_activity">从上次阅读的地方开始。</string>
    <string name="collect_chapter_activity">收藏</string>
    <string name="cancel_collect_chapter_activity">取消收藏</string>

    //CategoryFragment
    <string name="press">出版</string>

    //community
    <string name="community_comprehensive_comment">综合评论区</string>
    <string name="community_book_comment">书评区</string>
    <string name="community_recommend_book_comment">书荒互助区</string>
    <string name="community_girl_comment">女生区</string>
    <string name="community_original_comment">原创区</string>
    <string name="community_comment_all">全部</string>
    <string name="community_comment_distillate">精品</string>
    <string name="community_comment_sort_updated">默认排序</string>
    <string name="community_comment_sort_created">最新发布</string>
    <string name="community_comment_sort_most">评论最多</string>
    <string name="community_comment_sort_most_helpful">最有用的</string>


    //bookComment
    <string name="community_book_comment_type_all">全部类型</string>
    <string name="community_book_comment_type_xhqh">玄幻奇幻</string>
    <string name="community_book_comment_type_wxxx">武侠仙侠</string>
    <string name="community_book_comment_type_dsyn">都市异能</string>
    <string name="community_book_comment_type_lsjs">历史军事</string>
    <string name="community_book_comment_type_yxjj">游戏竞技</string>
    <string name="community_book_comment_type_khly">科幻灵异</string>
    <string name="community_book_comment_type_cyjk">穿越架空</string>
    <string name="community_book_comment_type_hmzc">豪门总裁</string>
    <string name="community_book_comment_type_xdyq">现代言情</string>
    <string name="community_book_comment_type_gdyq">古代言情</string>
    <string name="community_book_comment_type_hxyq">幻想言情</string>
    <string name="community_book_comment_type_dmtr">耽美同人</string>

    //readingActivity
    <string name="make_tag">打标签</string>
    <string name="read_my_word">记录</string>
    <string name="tag_forgot">忘记</string>
    <string name="search">搜索</string>
    <string name="warn_exist_tag">这里已经存在一个标签了</string>
    <string name="next_chapter">下一章</string>
    <string name="pre_chapter">上一章</string>
    <string name="current_tittle_tag_make">本章节打的标签</string>
    <string name="end_chapter">这是最后一章了</string>
    <string name="start_chapter">这是第一章</string>
    <string name="input_your_word">输入你想说的话</string>
    <string name="ensure">确定</string>
    <string name="cancel">取消</string>
    <string name="follower">追书人数</string>
    <string name="saver_percent">读者留存率</string>
    <string name="word_per_day">日更新字数</string>
    <string name="hot_comment">热门书评</string>
    <string name="start_reading">开始阅读</string>
    <string name="collect">收藏</string>
    <string name="download">下载</string>
    <string name="start_download">下载开始</string>
    <string name="downloading">正在下载</string>
    <string name="download_successful">下载成功</string>
    <string name="download_unsuccessful">下载失败</string>

    //search
    <string name="search_null">没有找到你想找的书</string>
    <string name="clear_search_log">清空消息记录</string>

    //bookShelf;
    <string name="book_shelf_collect_book">看你收藏的好书</string>
    <string name="book_shelf_already_download">已下载</string>
    <string name="book_shelf_already_collect">已收藏</string>

</resources>
