<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainFragment.RankingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/male_ranking"
                android:background="@color/colorLightGray"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/male" />

            <TextView
                android:id="@+id/male_week_ranking"
                android:layout_marginTop="@dimen/margin_of_text_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/week_ranking"/>

            <TextView
                android:id="@+id/male_month_ranking"
                android:layout_marginTop="@dimen/margin_of_text_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/month_ranking"/>

            <TextView
                android:id="@+id/male_total_ranking"
                android:layout_marginTop="@dimen/margin_of_text_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/total_ranking"/>

            <TextView
                android:id="@+id/female-ranking"
                android:background="@color/colorLightGray"
                android:layout_marginTop="@dimen/margin_of_text_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/female"/>

            <TextView
                android:id="@+id/female_week_ranking"
                android:layout_marginTop="@dimen/margin_of_text_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/week_ranking"/>

            <TextView
                android:id="@+id/female_month_ranking"
                android:layout_marginTop="@dimen/margin_of_text_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/month_ranking"/>
            <TextView
                android:id="@+id/female_total_ranking"
                android:layout_marginTop="@dimen/margin_of_text_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_big"
                android:text="@string/total_ranking"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent">

            <EditText
                android:imeOptions="actionDone"
                android:id="@+id/search_book_ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_book_hint"
                android:textSize="@dimen/text_size_big"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/ranking_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </android.support.v7.widget.RecyclerView>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>