<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <RelativeLayout
        android:background="@color/colorLightGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_toStartOf="@+id/reading_tag_view_forgot"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/tag"
            android:textSize="@dimen/text_size_big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:textColor="@color/colorBlue"
            android:id="@+id/reading_tag_view_forgot"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/tag_forgot"
            android:textSize="@dimen/text_size_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

    <TextView
        android:textSize="@dimen/text_size_mid"
        android:id="@+id/reading_tag_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:text="@string/read_my_word"
        android:textSize="@dimen/text_size_big"
        android:background="@color/colorLightGray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/reading_tag_my_word_text"
        android:textSize="@dimen/text_size_mid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>